tests/failing/double_pk_test.stderr
error: Multiple `#[pk]` columns found; only one is allowed
 --> tests/failing/double_pk_test.rs:7:5
  |
7 | /     #[pk]
8 | |     id2: u32,
  | |____________^

error[E0599]: no function or associated item named `routes` found for struct `DoublePkStruct` in the current scope
 --> tests/failing/double_pk_test.rs:3:1
  |
3 | #[entity]
  | ^^^^^^^^^ function or associated item not found in `DoublePkStruct`
4 | struct DoublePkStruct {
  | --------------------- function or associated item `routes` not found for this struct
  |
  = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `client_calls` found for struct `DoublePkStruct` in the current scope
 --> tests/failing/double_pk_test.rs:3:1
  |
3 | #[entity]
  | ^^^^^^^^^ function or associated item not found in `DoublePkStruct`
4 | struct DoublePkStruct {
  | --------------------- function or associated item `client_calls` not found for this struct
  |
  = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)
